--- a/MusicExpert/MusicExpert.csproj
+++ b/MusicExpert/MusicExpert.csproj
@@ -87,6 +87,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <EmbeddedResource Include="facts.clp" />
+    <EmbeddedResource Include="id_to_text.clp" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
